Now supports Linux and Mac OS X
Removing XCode projects entirely, leaving only
Makefiles, which work for both OS's.

Signed-off-by: FellowTraveler 
<F3llowTraveler@gmail.com>

--- a/transaction/Makefile
+++ b/transaction/Makefile
@@ -4,7 +4,7 @@
 # location
 #
 
-PROGRAM = createmint 
+PROGRAM = transaction 
 
 #
 # Command line parameters: Edit these parameters so that you can 
@@ -24,13 +24,14 @@ PROGRAM = createmint
 
 INCLUDEDIRS = \
 	-I/usr/local/ssl/include \
-	-I../../OTLib/irlxml \
-	-I../../OTLib \
+	-I../OTLib/irlxml \
+	-I../OTLib \
+	-I./SSL-Example \
 	-I./
 
 
 LIBDIRS = \
-	-L ../../OTLib
+	-L../OTLib
 
 
 LIBS = $(LIBDIRS) -lssl $(LIBDIRS) -lcrypto $(LIBDIRS) -lOTLib $(LIBDIRS) -lssl $(LIBDIRS) -lcrypto $(LIBDIRS) -lOTLib 
@@ -51,12 +52,20 @@ LIBS = $(LIBDIRS) -lssl $(LIBDIRS) -lcrypto $(LIBDIRS) -lOTLib $(LIBDIRS) -lssl 
 # directory information to be passed to the linker.
 #
 
+CSOURCES = ./SSL-Example/SFSocket.c
+
 CXXSOURCES = \
-			 main.cpp
+			 OTClientConnection.cpp \
+			 OTServer.cpp \
+			 server.cpp \
+			 OTMessageBuffer.cpp
 			 
 CXXOBJECTS = $(CXXSOURCES:.cpp=.o)  # expands to list of object files
+COBJECTS   = $(CSOURCES:.c=.o)
 CXXFLAGS   = $(INCLUDEDIRS)
+CFLAGS     = $(INCLUDEDIRS)
 CXX = g++
+CC = gcc
 LDFLAGS = $(LIBDIRS) $(LIBS)
 
 #
@@ -71,16 +80,25 @@ all: $(PROGRAM)
 # executing its link command.
 #
 
-$(PROGRAM): $(CXXOBJECTS)
-	$(CXX) -ldl $(CXXOBJECTS) $(LIBS) -o $@
+$(PROGRAM): $(CXXOBJECTS) $(COBJECTS) 
+	$(CXX) -ldl $(CXXOBJECTS) $(COBJECTS) $(LIBS) -o $@
 
 #
 # Object targets: rules that define objects, their dependencies, and
 # a list of commands for compilation.
 #
 
-main.o: main.cpp
-	$(CXX) $(CXXFLAGS) -c -o main.o main.cpp
+SFSocket.o: ./SSL-Example/SFSocket.c ./SSL-Example/SFSocket.h
+	$(CC) $(CFLAGS) -c -o ./SSL-Example/SFSocket.o ./SSL-Example/SFSocket.c
+
+OTClientConnection.o: OTClientConnection.cpp OTClientConnection.h
+	$(CXX) $(CXXFLAGS) -c -o OTClientConnection.o OTClientConnection.cpp
+OTServer.o: OTServer.cpp OTServer.h
+	$(CXX) $(CXXFLAGS) -c -o OTServer.o OTServer.cpp
+server.o: server.cpp
+	$(CXX) $(CXXFLAGS) -c -o server.o server.cpp
+OTMessageBuffer.o: OTMessageBuffer.cpp OTMessageBuffer.h
+	$(CXX) $(CXXFLAGS) -c -o OTMessageBuffer.o OTMessageBuffer.cpp
 
 
 #
@@ -88,7 +106,7 @@ main.o: main.cpp
 #
 
 clean:
-	$(RM) -f $(CXXOBJECTS) $(PROGRAM)
+	$(RM) -f $(CXXOBJECTS) $(COBJECTS) $(PROGRAM)
 
 #
 # Run target: "make -f Makefile.Linux run" to execute the application
