--- a/util/otcreatemint/Makefile
+++ b/util/otcreatemint/Makefile
@@ -4,7 +4,7 @@
 # location
 #
 
-PROGRAM = signcontract 
+PROGRAM = createmint 
 
 #
 # Command line parameters: Edit these parameters so that you can 
@@ -30,7 +30,7 @@ INCLUDEDIRS = \
 
 
 LIBDIRS = \
-	-L ../../OTLib
+	-L../../OTLib
 
 
 LIBS = $(LIBDIRS) -lssl $(LIBDIRS) -lcrypto $(LIBDIRS) -lOTLib $(LIBDIRS) -lssl $(LIBDIRS) -lcrypto $(LIBDIRS) -lOTLib 
