--- a/OTLib/OTLib/OTLib.vcxproj
+++ b/OTLib/OTLib/OTLib.vcxproj
@@ -38,7 +38,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\REDACTED\Documents\Visual Studio 2010\Projects\OTLib\Lucre;C:\OpenSSL-Win32\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\~\Open-Transactions\OTLib\Lucre;C:\~\OpenSSL-Win32\include;$(IncludePath)</IncludePath>
     <LibraryPath />
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -92,6 +92,7 @@
     <ClInclude Include="..\OTItem.h" />
     <ClInclude Include="..\OTLedger.h" />
     <ClInclude Include="..\OTMessage.h" />
+    <ClInclude Include="..\OTMessageBuffer.h" />
     <ClInclude Include="..\OTMint.h" />
     <ClInclude Include="..\OTPayload.h" />
     <ClInclude Include="..\OTPseudonym.h" />
@@ -127,6 +128,7 @@
     <ClCompile Include="..\OTItem.cpp" />
     <ClCompile Include="..\OTLedger.cpp" />
     <ClCompile Include="..\OTMessage.cpp" />
+    <ClCompile Include="..\OTMessageBuffer.cpp" />
     <ClCompile Include="..\OTMint.cpp" />
     <ClCompile Include="..\OTPayload.cpp" />
     <ClCompile Include="..\OTPseudonym.cpp" />
@@ -139,6 +141,7 @@
     <ClCompile Include="..\OTToken.cpp" />
     <ClCompile Include="..\OTTransaction.cpp" />
     <ClCompile Include="..\OTTransactionType.cpp" />
+    <ClCompile Include="..\OTWallet.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
