--- a/testwallet/Makefile.testwallet
+++ b/testwallet/Makefile.testwallet
@@ -34,7 +34,8 @@ LIBDIRS = \
 	-L../OTLib
 
 
-LIBS = $(LIBDIRS) -lssl $(LIBDIRS) -lcrypto $(LIBDIRS) -lOTLib $(LIBDIRS) -lssl $(LIBDIRS) -lcrypto $(LIBDIRS) -lOTLib 
+LIBS = $(LIBDIRS) -lOTLib /home/ben/work/openssl-1.0.0/libssl.a \
+     /home/ben/work/openssl-1.0.0/libcrypto.a
 
 #
 # The CXXSOURCES macro contains a list of source files.
@@ -52,7 +53,7 @@ LIBS = $(LIBDIRS) -lssl $(LIBDIRS) -lcrypto $(LIBDIRS) -lOTLib $(LIBDIRS) -lssl 
 # directory information to be passed to the linker.
 #
 
-CSOURCES = ./SSL-Example/SFSocket.c
+CSOURCES = SSL-Example/SFSocket.c
 
 CXXSOURCES = \
 			 OpenTransactions.cpp \
@@ -81,14 +82,14 @@ all: $(PROGRAM)
 #
 
 $(PROGRAM): $(CXXOBJECTS) $(COBJECTS) 
-	$(CXX) -ldl $(CXXOBJECTS) $(COBJECTS) $(LIBS) -o $@
+	$(CXX) $(CXXOBJECTS) $(COBJECTS) $(LIBS) -o $@
 
 #
 # Object targets: rules that define objects, their dependencies, and
 # a list of commands for compilation.
 #
 
-SFSocket.o: ./SSL-Example/SFSocket.c ./SSL-Example/SFSocket.h
+SSL-Example/SFSocket.o: ./SSL-Example/SFSocket.c ./SSL-Example/SFSocket.h
 	$(CC) $(CFLAGS) -c -o ./SSL-Example/SFSocket.o ./SSL-Example/SFSocket.c
 
 OTServerConnection.o: OTServerConnection.cpp OTServerConnection.h
@@ -104,6 +105,10 @@ testclient.o: testclient.cpp
 #
 # Clean target: "make -f Makefile.Linux clean" to remove unwanted objects and executables.
 #
+
+.ifndef RM
+RM=rm
+.endif
 
 clean:
 	$(RM) -f $(CXXOBJECTS) $(COBJECTS) $(PROGRAM)
