--- a/testwallet/Makefile.testwallet
+++ b/testwallet/Makefile.testwallet
@@ -24,7 +24,7 @@ PROGRAM = testwallet.exe
 
 INCLUDEDIRS = \
 	-I/usr/local/ssl/include \
-	-I../OTLib/irlxml \
+	-I../OTLib/irrxml \
 	-I../OTLib \
 	-I./SSL-Example \
 	-I./
@@ -34,8 +34,10 @@ LIBDIRS = \
 	-L../OTLib
 
 
-LIBS = $(LIBDIRS) -lOTLib /home/ben/work/openssl-1.0.0/libssl.a \
-     /home/ben/work/openssl-1.0.0/libcrypto.a
+LIBS = $(LIBDIRS) -lssl $(LIBDIRS) -lcrypto $(LIBDIRS) -lOTLib $(LIBDIRS) -lssl $(LIBDIRS) -lcrypto $(LIBDIRS) -lOTLib 
+
+#LIBS = $(LIBDIRS) -lOTLib /home/ben/work/openssl-1.0.0/libssl.a \
+#     /home/ben/work/openssl-1.0.0/libcrypto.a
 
 #
 # The CXXSOURCES macro contains a list of source files.
@@ -106,9 +108,9 @@ testclient.o: testclient.cpp
 # Clean target: "make -f Makefile.Linux clean" to remove unwanted objects and executables.
 #
 
-.ifndef RM
-RM=rm
-.endif
+ifndef RM
+	RM=rm
+endif
 
 clean:
 	$(RM) -f $(CXXOBJECTS) $(COBJECTS) $(PROGRAM)
