--- a/util/otcreatemint/Makefile
+++ b/util/otcreatemint/Makefile
@@ -24,7 +24,7 @@ PROGRAM = createmint
 
 INCLUDEDIRS = \
 	-I/usr/local/ssl/include \
-	-I../../OTLib/irlxml \
+	-I../../OTLib/irrxml \
 	-I../../OTLib \
 	-I./
 
