--- a/testwallet/Makefile.CPP_API
+++ b/testwallet/Makefile.CPP_API
@@ -24,7 +24,7 @@ PROGRAM = libOTAPI.a
 
 INCLUDEDIRS = \
 	-I/usr/local/ssl/include \
-	-I../OTLib/irlxml \
+	-I../OTLib/irrxml \
 	-I../OTLib \
 	-I./SSL-Example \
 	-I./
