--- a/testwallet/Makefile.testwallet
+++ b/testwallet/Makefile.testwallet
@@ -22,6 +22,17 @@ PROGRAM = testwallet.exe
 # executable must be linked against.
 #
 
+#
+# Make sure the first directory below has YOUR computer's path to the
+# OpenSSL include files. This is the one I use for Mac and Linux:
+#
+#        -I/usr/local/ssl/include \
+#
+# Or, if you prefer, the FreeBSD path to the OpenSSL include files:
+#
+#        -I/usr/local/include \
+#
+
 INCLUDEDIRS = \
 	-I/usr/local/ssl/include \
 	-I../OTLib/irrxml \
@@ -30,6 +41,7 @@ INCLUDEDIRS = \
 	-I./
 
 
+# For FreeBSD, add this library:  /usr/ports/security/openssl/work/openssl-1.0.0a
 LIBDIRS = \
 	-L../OTLib
 
@@ -108,9 +120,7 @@ testclient.o: testclient.cpp
 # Clean target: "make -f Makefile.Linux clean" to remove unwanted objects and executables.
 #
 
-ifndef RM
-	RM=rm
-endif
+RM=rm
 
 clean:
 	$(RM) -f $(CXXOBJECTS) $(COBJECTS) $(PROGRAM)
