--- a/transaction/Makefile
+++ b/transaction/Makefile
@@ -22,6 +22,17 @@ PROGRAM = transaction.exe
 # executable must be linked against.
 #
 
+#
+# Make sure the first directory below has YOUR computer's path to the
+# OpenSSL include files. This is the one I use for Mac and Linux:
+#
+#        -I/usr/local/ssl/include \
+#
+# Or, if you prefer, the FreeBSD path to the OpenSSL include files:
+#
+#        -I/usr/local/include \
+#
+
 INCLUDEDIRS = \
 	-I/usr/local/ssl/include \
 	-I../OTLib/irrxml \
@@ -29,7 +40,7 @@ INCLUDEDIRS = \
 	-I./SSL-Example \
 	-I./
 
-
+# For FreeBSD, add this library:  /usr/local/lib
 LIBDIRS = \
 	-L../OTLib 
 
@@ -107,9 +118,7 @@ testserver.o: testserver.cpp
 # Clean target: "make -f Makefile.Linux clean" to remove unwanted objects and executables.
 #
 
-ifndef RM
-	RM=rm
-endif
+RM=rm
 
 clean:
 	$(RM) -f $(CXXOBJECTS) $(COBJECTS) $(PROGRAM)
