--- a/testwallet/Makefile.API
+++ b/testwallet/Makefile.API
@@ -160,7 +160,7 @@ CSHARP_LDFLAGS = -shared
 # --- JAVA
 JAVA_PROGRAM = libOTAPI.so
 JAVA_DEBUG_PROGRAM = libOTAPId.so 
-JAVA_INCLUDEDIRS = # empty
+JAVA_INCLUDEDIRS = -I/usr/lib/jvm/java-6-openjdk/include
 JAVA_LDFLAGS = -shared
 
 
@@ -440,18 +440,9 @@ endif
 #                OR: make -f Makefile.API PLATFORM=freebsd LANGUAGE=ruby TRANSPORT=XmlRpc
 # 		Etc...
 #
-ifeq ($(PLATFORM), darwin)
-XMLRPCPP_INCLUDEDIR = -I/usr/local/include/XmlRpc
-XMLRPCPP_LIBDIR = -L/usr/local/lib/XmlRpc
-endif
-ifeq ($(PLATFORM), linux)
-XMLRPCPP_INCLUDEDIR = -I/usr/include/XmlRpc
-XMLRPCPP_LIBDIR = -L/usr/lib/XmlRpc
-endif
-ifeq ($(PLATFORM), freebsd)
-XMLRPCPP_INCLUDEDIR = -I/usr/include/XmlRpc
-XMLRPCPP_LIBDIR = -L/usr/lib/XmlRpc
-endif
+
+XMLRPCPP_INCLUDEDIR = -I../xmlrpcpp/src
+XMLRPCPP_LIBDIR = -L../xmlrpcpp/
 
 ifeq ($(TRANSPORT), XmlRpc)
 API_CFLAGS += -DOT_XMLRPC_MODE
